feat: add github-oidc-provider

--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -9,7 +9,7 @@ on:
       - 'develop'
       - 'feat**'
     paths:
-      - "projects/{{PROJECT}}/**"
+      - "products/{{PROJECT}}/**"
       - "./github/workflows/{{PROJECT}}.yaml"
 
 env:
