--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -42,15 +42,15 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          #working-directory: projects/${{inputs.app_name}}
-          path: projects/${{env.PROJECT_NAME}}/node_modules
+          #working-directory: products/${{inputs.app_name}}
+          path: products/${{env.PROJECT_NAME}}/node_modules
           key: npm-packages-${{ hashFiles('**/package-lock.json')}}
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: projects/${{env.PROJECT_NAME}}
+          working-directory: products/${{env.PROJECT_NAME}}
 
       - name: assume role
         uses: aws-actions/configure-aws-credentials@master
@@ -59,57 +59,13 @@ jobs:
           role-session-name: github-session
           aws-region: ap-northeast-2
 
-      #- name: cdk diff
-      #  run: npm run diff
-      #  working-directory: projects/${{inputs.app_name}}
-
       - name: cdk build 
         run: npm run synth
-        working-directory: projects/${{env.PROJECT_NAME}}
+        working-directory: products/${{env.PROJECT_NAME}}
 
       - name: cdk deploy
         run: yarn cdk deploy --all --require-approval never 
-        working-directory: projects/${{env.PROJECT_NAME}}
-
-  deploy_to_stage:
-    #if: github.event_name == 'pull_request' && ${{ inputs.stage == 'prod'}}
-    #if: github.event_name != 'push'
-    if: startsWith(github.ref , 'ref/heads/main')
-    runs-on: ubuntu-latest
-     # These permissions are needed to interact with GitHub's OIDC Token endpoint
-    permissions:
-      id-token: write
-      contents: read
-    env:
-      STAGE: stage
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
-
-      - uses: actions/setup-node@v2
-        with:
-          node-version: "14"
-
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1
-        with:
-          working-directory: projects/${{env.PROJECT_NAME}}
-
-      - name: assume role
-        uses: aws-actions/configure-aws-credentials@master
-        with:
-          role-to-assume:  arn:aws:iam::${{env.CDK_DEFAULT_ACCOUNT}}:role/${{env.EXECUTE_ROLE}}
-          role-session-name: github-session
-          aws-region: ap-northeast-2
-
-      - name: cdk build 
-        run: npm run synth
-        working-directory: projects/${{env.PROJECT_NAME}}
-      
-      - name: deploy cdk on stage
-        run: yarn cdk deploy --all --require-approval never 
-        working-directory: projects/${{env.PROJECT_NAME}}
+        working-directory: products/${{env.PROJECT_NAME}}
 
   deploy_to_prod:
     #if: github.event_name == 'pull_request' && ${{ inputs.stage == 'prod'}}
@@ -143,7 +99,7 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: projects/${{env.PROJECT_NAME}}
+          working-directory: products/${{env.PROJECT_NAME}}
 
       - name: assume role
         uses: aws-actions/configure-aws-credentials@master
@@ -154,8 +110,8 @@ jobs:
 
       - name: cdk build 
         run: npm run synth
-        working-directory: projects/${{env.PROJECT_NAME}}
+        working-directory: products/${{env.PROJECT_NAME}}
       
       - name: deploy cdk on prod
         run: yarn cdk deploy --all --require-approval never 
-        working-directory: projects/${{env.PROJECT_NAME}}
+        working-directory: products/${{env.PROJECT_NAME}}
