--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -71,7 +71,7 @@ jobs:
     #if: github.event_name == 'pull_request' && ${{ inputs.stage == 'prod'}}
     #if: github.event_name != 'push'
     if: startsWith(github.ref , 'ref/heads/main')
-    needs: deploy_to_stage
+    #needs: deploy_to_stage
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
     permissions:
