--- a/products/iam/package.json
+++ b/products/iam/package.json
@@ -45,6 +45,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@smakss/random-string": "*",
     "aws-cdk-lib": "^2.31.1",
     "constructs": "^10.0.5"
   },
