--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -2,12 +2,11 @@ name: {{PROJECT}}
 
 on:
   pull_request:
-    branches:
-      - main
+    types:
+      - labeled
   push:
     branches:
-      - 'develop'
-      - 'feat**'
+      - 'main'
     paths:
       - "products/{{PROJECT}}/**"
       - "./github/workflows/{{PROJECT}}.yaml"
@@ -21,7 +20,7 @@ env:
 
 jobs:
   build_and_deploy:
-    if: github.ref != 'ref/heads/main'
+    if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
     permissions:
@@ -70,7 +69,7 @@ jobs:
   deploy_to_prod:
     #if: github.event_name == 'pull_request' && ${{ inputs.stage == 'prod'}}
     #if: github.event_name != 'push'
-    if: github.ref == 'ref/heads/main'
+    if: ${{ github.ref == 'refs/heads/main' }}
     #needs: deploy_to_stage
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
