--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -6,7 +6,7 @@ on:
       - labeled
   push:
     branches:
-      - 'main'
+      - 'feat**'
     paths:
       - "products/{{PROJECT}}/**"
       - "./github/workflows/{{PROJECT}}.yaml"
