--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "apps/{{PROJECT}}/**"
+      - "products/{{PROJECT}}/**"
       - "./github/workflows/{{PROJECT}}.yaml"
   pull_request:
     types:
@@ -47,15 +47,15 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          #working-directory: apps/${{inputs.app_name}}
-          path: apps/${{env.PROJECT_NAME}}/node_modules
+          #working-directory: products/${{inputs.app_name}}
+          path: products/${{env.PROJECT_NAME}}/node_modules
           key: npm-packages-${{ hashFiles('**/package-lock.json')}}
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: apps/${{env.PROJECT_NAME}}
+          working-directory: products/${{env.PROJECT_NAME}}
 
       - name: assume role
         uses: aws-actions/configure-aws-credentials@master
@@ -66,15 +66,15 @@ jobs:
 
       #- name: cdk diff
       #  run: npm run diff
-      #  working-directory: apps/${{inputs.app_name}}
+      #  working-directory: products/${{inputs.app_name}}
 
       - name: cdk build 
         run: npm run synth
-        working-directory: apps/${{env.PROJECT_NAME}}
+        working-directory: products/${{env.PROJECT_NAME}}
 
       - name: cdk deploy
         run: yarn cdk deploy --all --require-approval never 
-        working-directory: apps/${{env.PROJECT_NAME}}
+        working-directory: products/${{env.PROJECT_NAME}}
 
   deploy_to_stage:
     #if: github.event_name == 'pull_request' && ${{ inputs.stage == 'prod'}}
@@ -99,7 +99,7 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: apps/${{env.PROJECT_NAME}}
+          working-directory: products/${{env.PROJECT_NAME}}
 
       - name: assume role
         uses: aws-actions/configure-aws-credentials@master
@@ -110,11 +110,11 @@ jobs:
 
       - name: cdk build 
         run: npm run synth
-        working-directory: apps/${{env.PROJECT_NAME}}
+        working-directory: products/${{env.PROJECT_NAME}}
       
       - name: deploy cdk on stage
         run: yarn cdk deploy --all --require-approval never 
-        working-directory: apps/${{env.PROJECT_NAME}}
+        working-directory: products/${{env.PROJECT_NAME}}
 
   deploy_to_prod:
     #if: github.event_name == 'pull_request' && ${{ inputs.stage == 'prod'}}
@@ -148,7 +148,7 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: apps/${{env.PROJECT_NAME}}
+          working-directory: products/${{env.PROJECT_NAME}}
 
       - name: assume role
         uses: aws-actions/configure-aws-credentials@master
@@ -159,8 +159,8 @@ jobs:
 
       - name: cdk build 
         run: npm run synth
-        working-directory: apps/${{env.PROJECT_NAME}}
+        working-directory: products/${{env.PROJECT_NAME}}
       
       - name: deploy cdk on prod
         run: yarn cdk deploy --all --require-approval never 
-        working-directory: apps/${{env.PROJECT_NAME}}
+        working-directory: products/${{env.PROJECT_NAME}}
