--- a/.github/workflows/iam.yaml
+++ b/.github/workflows/iam.yaml
@@ -1,16 +1,21 @@
 name: iam
 
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
-      - 'develop'
-      - 'feat**'
+      - main
     paths:
       - "products/iam/**"
       - "./github/workflows/iam.yaml"
+  pull_request:
+    types:
+      - labeled
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Enable Only when it is PROD'
+        required: false
+        type: boolean
 
 env:
   CI: "true"
@@ -20,8 +25,8 @@ env:
   EXECUTE_ROLE: github-deploy-role
 
 jobs:
-  build_and_deploy:
-    if: github.ref != 'ref/heads/main'
+  deploy_to_dev:
+    if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
     permissions:
@@ -59,6 +64,10 @@ jobs:
           role-session-name: github-session
           aws-region: ap-northeast-2
 
+      #- name: cdk diff
+      #  run: npm run diff
+      #  working-directory: products/${{inputs.app_name}}
+
       - name: cdk build 
         run: npm run synth
         working-directory: products/${{env.PROJECT_NAME}}
@@ -68,17 +77,14 @@ jobs:
         working-directory: products/${{env.PROJECT_NAME}}
 
   deploy_to_prod:
-    #if: github.event_name == 'pull_request' && ${{ inputs.stage == 'prod'}}
-    #if: github.event_name != 'push'
-    if: github.ref == 'ref/heads/main'
-    #needs: deploy_to_stage
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
     permissions:
       id-token: write
       contents: read
     env:
-      STAGE: prod 
+      STAGE: prod
     steps:
       #- name: approval
       #  uses: trstringer/manual-approval@v1
