--- a/.github/workflows/github-oidc-provider.yaml
+++ b/.github/workflows/github-oidc-provider.yaml
@@ -1,32 +1,23 @@
-name: github-oidc-provider
+name: Deploy github-oidc-provider Service Catalog Product 
 
 on:
   push:
     branches:
-      - main
+      - "main"
     paths:
       - "products/github-oidc-provider/**"
       - "./github/workflows/github-oidc-provider.yaml"
-  pull_request:
-    types:
-      - labeled
-  workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Enable Only when it is PROD'
-        required: false
-        type: boolean
 
 env:
   CI: "true"
   CDK_DEFAULT_ACCOUNT: '037729278610'
   CDK_DEFAULT_REGION: ap-northeast-2
-  PROJECT_NAME: github-oidc-provider
+  PROJECT_NAME: 'github-oidc-provider'
   EXECUTE_ROLE: github-deploy-role
 
+
 jobs:
-  deploy_to_dev:
-    if: ${{ github.event_name == 'pull_request' }}
+  build-and-publish:
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
     permissions:
@@ -64,36 +55,45 @@ jobs:
           role-session-name: github-session
           aws-region: ap-northeast-2
 
-      #- name: cdk diff
-      #  run: npm run diff
-      #  working-directory: products/${{inputs.app_name}}
-
       - name: cdk build 
         run: npm run synth
         working-directory: products/${{env.PROJECT_NAME}}
+      
+      # Publish artifact
+      - name: Publish artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: published-app
+          path: products/${{env.PROJECT_NAME}}
 
-      - name: cdk deploy
+  deploy-dev:
+    runs-on: 'ubuntu-latest'
+    environment: 'dev'
+    needs: build-and-publish
+    steps:
+
+      # Download published artifact
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: published-app
+          path: products/${{env.PROJECT_NAME}}
+      
+      - name: Deploy to AWS CDK App
         run: yarn cdk deploy --all --require-approval never 
         working-directory: products/${{env.PROJECT_NAME}}
 
-  deploy_to_prod:
-    if: ${{ github.ref == 'refs/heads/main' }}
+  deploy-prod:
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
+    environment: 'prod'
+    needs: [build-and-publish, deploy-dev]
     permissions:
       id-token: write
       contents: read
     env:
-      STAGE: prod
+      STAGE: prod 
     steps:
-      #- name: approval
-      #  uses: trstringer/manual-approval@v1
-      #  with:
-      #    secret: ${{ github.TOKEN }}
-      #    approvers: jingood2
-      #    minimum-approvals: 1
-      #    issue-title: "Deploying v1.3.5 to prod from staging"
-
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
@@ -101,8 +101,17 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
+      
+      - name: Cache node modules
+        uses: actions/cache@v2
+        id: cache
+        with:
+          #working-directory: products/${{inputs.app_name}}
+          path: products/${{env.PROJECT_NAME}}/node_modules
+          key: npm-packages-${{ hashFiles('**/package-lock.json')}}
 
       - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
         uses: bahmutov/npm-install@v1
         with:
           working-directory: products/${{env.PROJECT_NAME}}
@@ -118,6 +127,23 @@ jobs:
         run: npm run synth
         working-directory: products/${{env.PROJECT_NAME}}
       
-      - name: deploy cdk on prod
+      # Deploy to web app
+      - name: Deploy to AWS CDK App
         run: yarn cdk deploy --all --require-approval never 
+        working-directory: products/${{env.PROJECT_NAME}}
+  
+  destroy-dev:
+    runs-on: 'ubuntu-latest'
+    environment: 'dev'
+    needs: deploy-prod
+    steps:
+    # Download published artifact
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: published-app
+          path: products/${{env.PROJECT_NAME}}
+      
+      - name: Destroy to AWS Dev cdk App
+        run: yarn cdk destroy --all --require-approval never 
         working-directory: products/${{env.PROJECT_NAME}}
