--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -17,7 +17,7 @@ env:
 
 
 jobs:
-  build-and-publish:
+  deploy-dev:
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
     permissions:
@@ -65,19 +65,6 @@ jobs:
         with:
           name: published-app
           path: products/${{env.PROJECT_NAME}}
-
-  deploy-dev:
-    runs-on: 'ubuntu-latest'
-    environment: 'dev'
-    needs: build-and-publish
-    steps:
-
-      # Download published artifact
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: published-app
-          path: products/${{env.PROJECT_NAME}}
       
       - name: Deploy to AWS CDK App
         run: yarn cdk deploy --all --require-approval never 
@@ -87,7 +74,7 @@ jobs:
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
     environment: 'prod'
-    needs: [build-and-publish, deploy-dev]
+    needs: [deploy-dev]
     permissions:
       id-token: write
       contents: read
@@ -132,18 +119,18 @@ jobs:
         run: yarn cdk deploy --all --require-approval never 
         working-directory: products/${{env.PROJECT_NAME}}
   
-  destroy-dev:
-    runs-on: 'ubuntu-latest'
-    environment: 'dev'
-    needs: deploy-prod
-    steps:
-    # Download published artifact
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: published-app
-          path: products/${{env.PROJECT_NAME}}
-      
-      - name: Destroy to AWS Dev cdk App
-        run: yarn cdk destroy --all --require-approval never 
-        working-directory: products/${{env.PROJECT_NAME}}
+  #destroy-dev:
+  #  runs-on: 'ubuntu-latest'
+  #  environment: 'dev'
+  #  needs: deploy-prod
+  #  steps:
+  #  # Download published artifact
+  #    - name: Download artifact
+  #      uses: actions/download-artifact@v2
+  #      with:
+  #        name: published-app
+  #        path: products/${{env.PROJECT_NAME}}
+  #    
+  #    - name: Destroy to AWS Dev cdk App
+  #      run: yarn cdk destroy --all --require-approval never 
+  #      working-directory: products/${{env.PROJECT_NAME}}
