--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -64,7 +64,9 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: published-app
-          path: products/${{env.PROJECT_NAME}}
+          path: |
+            products/${{env.PROJECT_NAME}}
+            !products/${{env.PROJECT_NAME}}/node_modules
       
       - name: Deploy to AWS CDK App
         run: yarn cdk deploy --all --require-approval never 
@@ -119,18 +121,18 @@ jobs:
         run: yarn cdk deploy --all --require-approval never 
         working-directory: products/${{env.PROJECT_NAME}}
   
-  #destroy-dev:
-  #  runs-on: 'ubuntu-latest'
-  #  environment: 'dev'
-  #  needs: deploy-prod
-  #  steps:
-  #  # Download published artifact
-  #    - name: Download artifact
-  #      uses: actions/download-artifact@v2
-  #      with:
-  #        name: published-app
-  #        path: products/${{env.PROJECT_NAME}}
-  #    
-  #    - name: Destroy to AWS Dev cdk App
-  #      run: yarn cdk destroy --all --require-approval never 
-  #      working-directory: products/${{env.PROJECT_NAME}}
+  destroy-dev:
+    runs-on: 'ubuntu-latest'
+    environment: 'dev'
+    needs: deploy-prod
+    steps:
+    # Download published artifact
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: published-app
+          path: products/${{env.PROJECT_NAME}}
+      
+      - name: Destroy to AWS Dev cdk App
+        run: yarn cdk destroy --all --require-approval never 
+        working-directory: products/${{env.PROJECT_NAME}}
