--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -74,7 +74,7 @@ jobs:
       
       - uses: trstringer/manual-approval@v1
         with:
-          secret: ${{ github.TOKEN }}
+          secret: ${{ secrets.GITHUB_TOKEN}}
           approvers: jingood2 
       
       - name: Destroy to AWS cdk dev App
@@ -141,6 +141,27 @@ jobs:
         with:
           name: published-app
           path: products/${{env.PROJECT_NAME}}
+      
+      - name: Cache node modules
+        uses: actions/cache@v2
+        id: cache
+        with:
+          #working-directory: products/${{inputs.app_name}}
+          path: products/${{env.PROJECT_NAME}}/node_modules
+          key: npm-packages-${{ hashFiles('**/package-lock.json')}}
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        uses: bahmutov/npm-install@v1
+        with:
+          working-directory: products/${{env.PROJECT_NAME}}
+
+      - name: assume role
+        uses: aws-actions/configure-aws-credentials@master
+        with:
+          role-to-assume:  arn:aws:iam::${{env.CDK_DEFAULT_ACCOUNT}}:role/${{env.EXECUTE_ROLE}}
+          role-session-name: github-session
+          aws-region: ap-northeast-2
       
       - name: Destroy to AWS Dev cdk App
         run: yarn cdk destroy --all --require-approval never 
