--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -21,8 +21,9 @@ jobs:
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
     permissions:
-      id-token: write
-      contents: read
+      write-all
+      #id-token: write
+      #contents: read
     env:
       STAGE: dev
     steps:
