--- a/.github/workflows/iam.yaml
+++ b/.github/workflows/iam.yaml
@@ -7,7 +7,6 @@ on:
     paths:
       - "products/iam/**"
       - "./github/workflows/iam.yaml"
-
 env:
   CI: "true"
   CDK_DEFAULT_ACCOUNT: '037729278610'
@@ -21,9 +20,9 @@ jobs:
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
     permissions:
-      write-all
-      #id-token: write
-      #contents: read
+      #write-all
+      id-token: write
+      contents: read
     env:
       STAGE: dev
     steps:
@@ -73,10 +72,52 @@ jobs:
         run: yarn cdk deploy --all --require-approval never 
         working-directory: products/${{env.PROJECT_NAME}}
       
-      - uses: trstringer/manual-approval@v1
+      #- uses: trstringer/manual-approval@v1
+      #  with:
+      #    secret: ${{ github.TOKEN}}
+      #    approvers: jingood2 
+      
+      #- name: Destroy to AWS cdk dev App
+      #  run: yarn cdk destroy --all --require-approval never 
+      #  working-directory: products/${{env.PROJECT_NAME}}
+  approve-deploy-prod:
+    runs-on: ubuntu-latest
+    environment: 'prod'
+    needs: [deploy-dev]
+    permissions:
+      id-token: write
+      contents: read
+    env:
+      STAGE: dev
+    steps:
+      - uses: actions/checkout@v3
         with:
-          secret: ${{ github.TOKEN}}
-          approvers: jingood2 
+          fetch-depth: 1
+
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "14"
+      
+      - name: Cache node modules
+        uses: actions/cache@v2
+        id: cache
+        with:
+          #working-directory: products/${{inputs.app_name}}
+          path: products/${{env.PROJECT_NAME}}/node_modules
+          key: npm-packages-${{ hashFiles('**/package-lock.json')}}
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        uses: bahmutov/npm-install@v1
+        with:
+          working-directory: products/${{env.PROJECT_NAME}}
+
+      - name: assume role
+        uses: aws-actions/configure-aws-credentials@master
+        with:
+          role-to-assume:  arn:aws:iam::${{env.CDK_DEFAULT_ACCOUNT}}:role/${{env.EXECUTE_ROLE}}
+          role-session-name: github-session
+          aws-region: ap-northeast-2
       
       - name: Destroy to AWS cdk dev App
         run: yarn cdk destroy --all --require-approval never 
@@ -86,7 +127,7 @@ jobs:
     runs-on: ubuntu-latest
      # These permissions are needed to interact with GitHub's OIDC Token endpoint
     environment: 'prod'
-    needs: [deploy-dev]
+    needs: [approve-deploy-prod]
     permissions:
       id-token: write
       contents: read
@@ -131,39 +172,40 @@ jobs:
         run: yarn cdk deploy --all --require-approval never 
         working-directory: products/${{env.PROJECT_NAME}}
   
-  destroy-dev:
-    runs-on: 'ubuntu-latest'
-    environment: 'dev'
-    needs: deploy-prod
-    steps:
-    # Download published artifact
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: published-app
-          path: products/${{env.PROJECT_NAME}}
-      
-      - name: Cache node modules
-        uses: actions/cache@v2
-        id: cache
-        with:
-          #working-directory: products/${{inputs.app_name}}
-          path: products/${{env.PROJECT_NAME}}/node_modules
-          key: npm-packages-${{ hashFiles('**/package-lock.json')}}
+  #destroy-dev:
+  #  runs-on: 'ubuntu-latest'
+  #  environment: 'dev'
+  #  needs: deploy-prod
+  #  steps:
+  #  # Download published artifact
+  #    - name: Download artifact
+  #      uses: actions/download-artifact@v2
+  #      with:
+  #        name: published-app
+  #        path: products/${{env.PROJECT_NAME}}
+  #    
+  #    - name: Cache node modules
+  #      uses: actions/cache@v2
+  #      id: cache
+  #      with:
+  #        #working-directory: products/${{inputs.app_name}}
+  #        path: products/${{env.PROJECT_NAME}}/node_modules
+  #        key: npm-packages-${{ hashFiles('**/package-lock.json')}}
+#
+#      - name: Install dependencies
+#        if: steps.cache.outputs.cache-hit != 'true'
+#        uses: bahmutov/npm-install@v1
+#        with:
+#          working-directory: products/${{env.PROJECT_NAME}}
 
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        uses: bahmutov/npm-install@v1
-        with:
-          working-directory: products/${{env.PROJECT_NAME}}
-
-      - name: assume role
-        uses: aws-actions/configure-aws-credentials@master
-        with:
-          role-to-assume:  arn:aws:iam::${{env.CDK_DEFAULT_ACCOUNT}}:role/${{env.EXECUTE_ROLE}}
-          role-session-name: github-session
-          aws-region: ap-northeast-2
-      
-      - name: Destroy to AWS Dev cdk App
-        run: yarn cdk destroy --all --require-approval never 
-        working-directory: products/${{env.PROJECT_NAME}}
+#      - name: assume role
+#        uses: aws-actions/configure-aws-credentials@master
+#        with:
+#          role-to-assume:  arn:aws:iam::${{env.CDK_DEFAULT_ACCOUNT}}:role/${{env.EXECUTE_ROLE}}
+#          role-session-name: github-session
+#          aws-region: ap-northeast-2
+#      
+#      - name: Destroy to AWS Dev cdk App
+#        run: yarn cdk destroy --all --require-approval never 
+#        working-directory: products/${{env.PROJECT_NAME}}
+#
