--- a/.github/workflows/common/portfolio.yaml
+++ b/.github/workflows/common/portfolio.yaml
@@ -1,17 +1,17 @@
-name: Deploy {{PROJECT}} Service Catalog Product 
+name: Deploy portfolio Service Catalog Product 
 
 on:
   push:
     branches:
       - "main"
     paths:
-      - "products/{{PROJECT}}/**"
-      - "./github/workflows/{{PROJECT}}.yaml"
+      - "projects/common/portfolio/**"
+      - "./github/workflows/common/portfolio.yaml"
 env:
   CI: "true"
-  CDK_DEFAULT_ACCOUNT: '{{TARGET_ACCOUNT}}'
+  CDK_DEFAULT_ACCOUNT: '037729278610'
   CDK_DEFAULT_REGION: ap-northeast-2
-  PROJECT_NAME: '{{PROJECT}}'
+  PROJECT_NAME: 'common-portfolio'
   EXECUTE_ROLE: github-deploy-role
 
 
@@ -38,15 +38,15 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          #working-directory: products/${{inputs.app_name}}
-          path: products/${{env.PROJECT_NAME}}/node_modules
+          #working-directory: projects/${{inputs.app_name}}
+          path: projects/common/portfolio/node_modules
           key: npm-packages-${{ hashFiles('**/package-lock.json')}}
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: products/${{env.PROJECT_NAME}}
+          working-directory: projects/common/portfolio
 
       - name: assume role
         uses: aws-actions/configure-aws-credentials@master
@@ -57,7 +57,7 @@ jobs:
 
       - name: cdk build 
         run: npm run synth
-        working-directory: products/${{env.PROJECT_NAME}}
+        working-directory: projects/common/portfolio
       
       # Publish artifact
       - name: Publish artifact
@@ -65,12 +65,12 @@ jobs:
         with:
           name: published-app
           path: |
-            products/${{env.PROJECT_NAME}}
-            !products/${{env.PROJECT_NAME}}/node_modules
+            projects/common/portfolio
+            !projects/common/portfolio/node_modules
       
       - name: Deploy to AWS cdk dev App
         run: yarn cdk deploy --all --require-approval never 
-        working-directory: products/${{env.PROJECT_NAME}}
+        working-directory: projects/common/portfolio
       
       #- uses: trstringer/manual-approval@v1
       #  with:
@@ -79,7 +79,7 @@ jobs:
       
       #- name: Destroy to AWS cdk dev App
       #  run: yarn cdk destroy --all --require-approval never 
-      #  working-directory: products/${{env.PROJECT_NAME}}
+      #  working-directory: projects/${{env.PROJECT_NAME}}
   approval:
     runs-on: ubuntu-latest
     environment: 'prod'
@@ -102,15 +102,15 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          #working-directory: products/${{inputs.app_name}}
-          path: products/${{env.PROJECT_NAME}}/node_modules
+          #working-directory: projects/${{inputs.app_name}}
+          path: projects/common/portfolio/node_modules
           key: npm-packages-${{ hashFiles('**/package-lock.json')}}
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: products/${{env.PROJECT_NAME}}
+          working-directory: projects/common/portfolio
 
       - name: assume role
         uses: aws-actions/configure-aws-credentials@master
@@ -121,7 +121,7 @@ jobs:
       
       - name: Destroy dev branch cdk app
         run: yarn cdk destroy --all --require-approval never 
-        working-directory: products/${{env.PROJECT_NAME}}
+        working-directory: projects/common/portfolio
 
   deploy-prod:
     runs-on: ubuntu-latest
@@ -146,15 +146,15 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          #working-directory: products/${{inputs.app_name}}
-          path: products/${{env.PROJECT_NAME}}/node_modules
+          #working-directory: projects/${{inputs.app_name}}
+          path: projects/common/{{PROJECT_NAME}}/node_modules
           key: npm-packages-${{ hashFiles('**/package-lock.json')}}
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         uses: bahmutov/npm-install@v1
         with:
-          working-directory: products/${{env.PROJECT_NAME}}
+          working-directory: projects/common/portfolio
 
       - name: assume role
         uses: aws-actions/configure-aws-credentials@master
@@ -165,12 +165,12 @@ jobs:
 
       - name: cdk build 
         run: npm run synth
-        working-directory: products/${{env.PROJECT_NAME}}
+        working-directory: projects/common/portfolio
       
       # Deploy to web app
       - name: Deploy to AWS CDK App
         run: yarn cdk deploy --all --require-approval never 
-        working-directory: products/${{env.PROJECT_NAME}}
+        working-directory: projects/common/portfolio
   
   #destroy-dev:
   #  runs-on: 'ubuntu-latest'
@@ -182,21 +182,21 @@ jobs:
   #      uses: actions/download-artifact@v2
   #      with:
   #        name: published-app
-  #        path: products/${{env.PROJECT_NAME}}
+  #        path: projects/${{env.PROJECT_NAME}}
   #    
   #    - name: Cache node modules
   #      uses: actions/cache@v2
   #      id: cache
   #      with:
-  #        #working-directory: products/${{inputs.app_name}}
-  #        path: products/${{env.PROJECT_NAME}}/node_modules
+  #        #working-directory: projects/${{inputs.app_name}}
+  #        path: projects/${{env.PROJECT_NAME}}/node_modules
   #        key: npm-packages-${{ hashFiles('**/package-lock.json')}}
 #
 #      - name: Install dependencies
 #        if: steps.cache.outputs.cache-hit != 'true'
 #        uses: bahmutov/npm-install@v1
 #        with:
-#          working-directory: products/${{env.PROJECT_NAME}}
+#          working-directory: projects/${{env.PROJECT_NAME}}
 
 #      - name: assume role
 #        uses: aws-actions/configure-aws-credentials@master
@@ -207,5 +207,5 @@ jobs:
 #      
 #      - name: Destroy to AWS Dev cdk App
 #        run: yarn cdk destroy --all --require-approval never 
-#        working-directory: products/${{env.PROJECT_NAME}}
+#        working-directory: projects/${{env.PROJECT_NAME}}
 #
