--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -90,9 +90,9 @@ jobs:
     env:
       STAGE: dev
     steps:
-      #- uses: actions/checkout@v3
-      #  with:
-      #    fetch-depth: 1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
 
       - uses: actions/setup-node@v2
         with:
