refactor: stack name rule convention

--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -131,7 +131,7 @@ jobs:
         working-directory: {{ROOT_DIR}}/{{CATEGORY}}/{{PROJECT}}
       
       - name: Destroy dev branch cdk app
-        run: yarn cdk destroy --all --require-approval never 
+        run: yarn cdk destroy {{CATEGORY}}-{{PROJECT}}-${{env.STAGE}} --all --force
         working-directory: {{ROOT_DIR}}/{{CATEGORY}}/{{PROJECT}}
 
   deploy-prod:
