--- a/.github/workflows/common-github-oidc-provider.yaml
+++ b/.github/workflows/common-github-oidc-provider.yaml
@@ -131,7 +131,7 @@ jobs:
         working-directory: projects/common/github-oidc-provider
       
       - name: Destroy dev branch cdk app
-        run: yarn cdk destroy common-github-oidc-provider-${{env.STAGE}} --all --force
+        run: yarn cdk destroy common-github-oidc-provider-${{env.STAGE}} --force
         working-directory: projects/common/github-oidc-provider
 
   deploy-prod:
