--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -131,11 +131,7 @@ jobs:
         working-directory: {{ROOT_DIR}}/{{CATEGORY}}/{{PROJECT}}
       
       - name: Destroy dev branch cdk app
-<<<<<<< HEAD
-        run: yarn cdk destroy {{CATEGORY}}-{{PROJECT}}-${{env.STAGE}} --force
-=======
-        run: yarn cdk destroy {{CATEGORY}}-{{PROJECT}}-${{env.STAGE}} --all --force
->>>>>>> 59b23e92d7baeaa25db3301dd3d2cf59fc85e889
+        run: yarn cdk destroy sc-{{CATEGORY}}-{{PROJECT}}-${{env.STAGE}} --force
         working-directory: {{ROOT_DIR}}/{{CATEGORY}}/{{PROJECT}}
 
   deploy-prod:
