--- a/.github/workflows/common-portfolio.yaml
+++ b/.github/workflows/common-portfolio.yaml
@@ -131,11 +131,7 @@ jobs:
         working-directory: projects/common/portfolio
       
       - name: Destroy dev branch cdk app
-<<<<<<< HEAD
-        run: yarn cdk destroy common-portfolio-${{env.STAGE}} --force
-=======
-        run: yarn cdk destroy common-portfolio-${{env.STAGE}} --all --force
->>>>>>> 59b23e92d7baeaa25db3301dd3d2cf59fc85e889
+        run: yarn cdk destroy sc-common-portfolio-${{env.STAGE}} --force
         working-directory: projects/common/portfolio
 
   deploy-prod:
