--- a/.github/workflows/governance-iam.yaml
+++ b/.github/workflows/governance-iam.yaml
@@ -131,11 +131,7 @@ jobs:
         working-directory: projects/governance/iam
       
       - name: Destroy dev branch cdk app
-<<<<<<< HEAD
-        run: yarn cdk destroy governance-iam-${{env.STAGE}} --force
-=======
-        run: yarn cdk destroy governance-iam-${{env.STAGE}} --all --force
->>>>>>> 59b23e92d7baeaa25db3301dd3d2cf59fc85e889
+        run: yarn cdk destroy sc-governance-iam-${{env.STAGE}} --force
         working-directory: projects/governance/iam
 
   deploy-prod:
