Feat/firestarter issue#18 (#37)
* refactor: 프로젝트 디렉토리 구조 변경

* refactor: workflow 내 node_module 캐시제거

* bug: fix workflow

* refactor: remove portfolio in iam

* refactor: update  portfolio in iam

* refactor: update  portfolio in iam

* refactor: update  portfolio in iam

* refactor: update  portfolio in iam

* refactor: update  portfolio in iam

* refactor: stack name rule convention

* refactor: change service catalog stack name

* refactor: change service catalog stack name

--- a/.github/cdk-workflow-template.yaml
+++ b/.github/cdk-workflow-template.yaml
@@ -131,7 +131,7 @@ jobs:
         working-directory: {{ROOT_DIR}}/{{CATEGORY}}/{{PROJECT}}
       
       - name: Destroy dev branch cdk app
-        run: yarn cdk destroy {{CATEGORY}}-{{PROJECT}}-${{env.STAGE}} --all --force
+        run: yarn cdk destroy sc-{{CATEGORY}}-{{PROJECT}}-${{env.STAGE}} --force
         working-directory: {{ROOT_DIR}}/{{CATEGORY}}/{{PROJECT}}
 
   deploy-prod:
