--- a/.github/workflows/governance-iam.yaml
+++ b/.github/workflows/governance-iam.yaml
@@ -131,7 +131,7 @@ jobs:
         working-directory: projects/governance/iam
       
       - name: Destroy dev branch cdk app
-        run: npm run destroy sc-governance-iam-${{env.STAGE}} --force
+        run: cdk destroy sc-governance-iam-${{env.STAGE}} --force
         working-directory: projects/governance/iam
 
   deploy-prod:
@@ -180,7 +180,7 @@ jobs:
       
       # Deploy to web app
       - name: Deploy to AWS CDK App
-        run: npm run deploy --all --require-approval never 
+        run: yarn cdk deploy --all --require-approval never 
         working-directory: projects/governance/iam
   
   #destroy-dev:
