Feat/firestarter issue#18 (#43)
* refactor: 프로젝트 디렉토리 구조 변경

* refactor: workflow 내 node_module 캐시제거

* bug: fix workflow

* refactor: remove portfolio in iam

* refactor: update  portfolio in iam

* refactor: update  portfolio in iam

* refactor: update  portfolio in iam

* refactor: update  portfolio in iam

* refactor: update  portfolio in iam

* refactor: stack name rule convention

* refactor: change service catalog stack name

* refactor: change service catalog stack name

* refactor: change service catalog stack name

* refactor: change service catalog stack name

* refactor: change service catalog stack name

* refactor: change service catalog stack name

* refactor: change service catalog stack name

--- a/.github/workflows/common-portfolio.yaml
+++ b/.github/workflows/common-portfolio.yaml
@@ -131,7 +131,7 @@ jobs:
         working-directory: projects/common/portfolio
       
       - name: Destroy dev branch cdk app
-        run: npm run destroy sc-common-portfolio-${{env.STAGE}} --force
+        run: cdk destroy sc-common-portfolio-${{env.STAGE}} --force
         working-directory: projects/common/portfolio
 
   deploy-prod:
