--- a/.github/workflows/governance-iam.yaml
+++ b/.github/workflows/governance-iam.yaml
@@ -131,7 +131,7 @@ jobs:
         working-directory: projects/governance/iam
       
       - name: Destroy dev branch cdk app
-        run: cdk destroy sc-governance-iam-${{env.STAGE}} --force
+        run: yarn cdk destroy sc-governance-iam-${{env.STAGE}} --force
         working-directory: projects/governance/iam
 
   deploy-prod:
