--- a/.github/workflows/common-github-oidc-provider.yaml
+++ b/.github/workflows/common-github-oidc-provider.yaml
@@ -131,7 +131,7 @@ jobs:
         working-directory: projects/common/github-oidc-provider
       
       - name: Destroy dev branch cdk app
-        run: yarn cdk destroy sc-common-github-oidc-provider-${{env.STAGE}} --force
+        run: yarn cdk destroy --all --force
         working-directory: projects/common/github-oidc-provider
 
   deploy-prod:
@@ -180,7 +180,7 @@ jobs:
       
       # Deploy to web app
       - name: Deploy to AWS CDK App
-        run: npm run deploy --all --require-approval never 
+        run: yarn cdk deploy --all --require-approval never 
         working-directory: projects/common/github-oidc-provider
   
   #destroy-dev:
