--- a/.github/workflows/infra-network.yaml
+++ b/.github/workflows/infra-network.yaml
@@ -131,7 +131,7 @@ jobs:
         working-directory: projects/infra/network
       
       - name: Destroy dev branch cdk app
-        run: yarn cdk destroy sc-infra-network-${{env.STAGE}} --force
+        run: yarn cdk destroy --all --force
         working-directory: projects/infra/network
 
   deploy-prod:
@@ -180,7 +180,7 @@ jobs:
       
       # Deploy to web app
       - name: Deploy to AWS CDK App
-        run: npm run deploy --all --require-approval never 
+        run: yarn cdk deploy --all --require-approval never 
         working-directory: projects/infra/network
   
   #destroy-dev:
