feat: add alb with acm create a record on route53

--- a/projects/infra/alb/src/lib/cfn-template/alb-add-r53-record-v2.yaml
+++ b/projects/infra/alb/src/lib/cfn-template/alb-add-r53-record-v2.yaml
@@ -105,7 +105,10 @@ Resources:
       Name: !Sub '${RecordName}.'
       Type: A
       AliasTarget:
-        DNSName: !Sub 'dualstack.${PublicLoadBalancer}'
+        DNSName: !Join
+          - ''
+          - - 'dualstack.'
+            - !Ref PublicLoadBalancer 
         HostedZoneId: !Ref Route53HostedZoneId
       HostedZoneId: !Ref Route53HostedZoneId
 Outputs:
