--- a/projects/devops/image-ci/src/lib/buildspec/buildspec-ci-v2.yaml
+++ b/projects/devops/image-ci/src/lib/buildspec/buildspec-ci-v2.yaml
@@ -14,6 +14,9 @@ phases:
       - echo $SERVICE_NAME
       - echo $CONTAINER_PORT
       - echo $ARTIFACT_BUCKET
+      - echo $BUILD_TYPE
+      - echo $TARGET_TYPE
+      - echo $IMAGE_TAG
       - aws --version
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - export IMAGE_TAG=${COMMIT_HASH:=latest}
@@ -33,7 +36,6 @@ phases:
         fi
       - |
         if [ "$BUILD_TYPE" = "MAVEN" ]; then 
-          export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m";
           which mvn;
           chmod +x mvnw ;
           ./mvnw package;
